# aemu

./: AGENTS.md  Cargo.toml  build.rs  run_mcpe.sh
docs/: armv6_completion_audit.md  armv6_status.md  armv7a_cpu_validation.md  dual_cpu_backend_audit.md  dynarmic_backend_eval.md  interpreter_release_pipeline.md  minecraft_pe_probe.md  minecraft_runtime_audit.md  no_fake_hle.md  research_plan.md
src/: apk_plan.rs  armv6.rs  armv7a.rs  dex_index.rs  dynarmic_backend.rs  dynarmic_shim.cpp  elf_dynamic.rs  elf_linker.rs  elf_loader.rs  elf_probe.rs  gles_trace.rs  guest_memory.rs  hle_imports.rs  host.rs  lib.rs  main.rs  native_loader.rs  native_runtime.rs  png_util.rs  qemu_tcg.rs  sdl_shell.rs  wasm_api.rs  wasm_bench.rs  wasm_webgl.rs  ws_harness.rs  zip_probe.rs
tests/: armv7a_oracle.rs  qemu_oracle.rs
tools/: mcpe_smoke.py  mcpe_ui_smoke.py  trace_check.py  trace_query.py  wasm_cpu_bench.mjs  ws_cli.py
web/: mcpe_first_frame.html
