[package]
name = "aemu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
sdl2 = ["dep:sdl2"]
webgl = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
js-sys = { version = "0.3", optional = true }
sdl2 = { version = "0.38", optional = true }
serde_json = "1"
sha1 = "0.10"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
